--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "title": "Resume",
-    "name": "startbootstrap-resume",
+    "title": "Edugen-Insight into science",
+    "name": "edugen-insightintoscience",
     "version": "5.0.2",
-    "description": "Resume is a simple, yet elegant resume and CV theme for Bootstrap 4.",
+    "description": "Bootstrap 4.",
     "keywords": [
         "css",
         "sass",
